WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294655
[macOS] Device Management password field in System Settings is not autofocused
https://bugs.webkit.org/show_bug.cgi?id=294655
Summary
[macOS] Device Management password field in System Settings is not autofocused
Aditya Keerthi
Reported
2025-06-17 22:11:32 PDT
rdar://147434540
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-06-17 22:30:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46886
EWS
Comment 2
2025-06-18 10:15:05 PDT
Committed
296384@main
(be6ccb595147): <
https://commits.webkit.org/296384@main
> Reviewed commits have been landed. Closing PR #46886 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug